Agrego logs, manejo de errores y observabilidad