@@ -2,10 +2,11 @@ package ar.utn.ba.ddsi.apipublica.services;
 
 import ar.utn.ba.ddsi.apipublica.models.dtos.ProvinciaOutputDTO;
 import ar.utn.ba.ddsi.apipublica.models.repository.ProvinciaRepository;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-
+@Slf4j
 @Service
 public class ProvinciaService {
     private final ProvinciaRepository provinciaRepository;
@@ -15,9 +16,14 @@ public class ProvinciaService {
     }
 
     public List<ProvinciaOutputDTO> findAll() {
-        return provinciaRepository.findAll().stream()
+        log.info("Obteniendo todas las provincias");
+
+        List<ProvinciaOutputDTO> provincias = provinciaRepository.findAll().stream()
                 .map(provincia -> new ProvinciaOutputDTO(provincia.getNombre(), provincia.getPais()))
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
+
+        log.debug("Provincias obtenidas: {}", provincias.size());
+        return provincias;
     }
 
 }
